# indi-3rdparty

./: CMakeLists.txt
build_tis/: config.h  indi_tis_ccd  indi_tis_ccd.xml  tis_ccd.layout
build_v4ltis/: config.h  indi_v4ltis_ccd.xml
cmake_modules/: FindINDI.cmake
indi-tis/: CMakeLists.txt  tis_ccd.cpp  tis_ccd.h
indi-v4ltis/: CMakeLists.txt  config.h.cmake  indi_tis_ccd.xml.cmake  indi_v4ltis_ccd.xml.cmake  tis_ccd.cpp  tis_ccd.h  v4ltis_ccd.cpp  v4ltis_ccd.h
